Butttons for Keyframing Settings Are Mutually Exclusive #43343

Closed
opened 2015-01-21 17:46:40 +01:00 by Sam Brubaker · 9 comments

Version 2.73 (Linux 64-bit)

This bug requires no example file to reproduce.

How to reproduce:

  • Open Blender, go to the Scene Properties, and add a Keying Set.
  • Examine the "Keyframing Settings" for the keying set and notice what happens when you click them.

KeyframingSettings.png

Turning on one option disables the others, which might lead a user to think that these three miscellaneous options are related, but they are not. Enabling more than one option in this panel requires the user to hold down shift while clicking. This makes no sense and no other area in the properties window behaves like this!

I think this design flaw counts as a bug. These options should not be grouped this way, and ought to be in the form of checkboxes instead.

Version 2.73 (Linux 64-bit) This bug requires no example file to reproduce. How to reproduce: - Open Blender, go to the Scene Properties, and add a Keying Set. - Examine the "Keyframing Settings" for the keying set and notice what happens when you click them. ![KeyframingSettings.png](https://archive.blender.org/developer/F138596/KeyframingSettings.png) Turning on one option disables the others, which might lead a user to think that these three miscellaneous options are related, but they are not. Enabling more than one option in this panel requires the user to hold down shift while clicking. This makes no sense and no other area in the properties window behaves like this! I think this design flaw counts as a bug. These options should not be grouped this way, and ought to be in the form of checkboxes instead.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Joshua Leung self-assigned this 2015-01-22 12:17:02 +01:00
Member

Assigning to self. I've been annoyed about this for a while now.

IIRC, at the very beginning, a very long time ago, it wasn't like this. Then, it suddenly changed once, when someone used the enum bitflag prop-widget and/or wrapped all of them in that way... which is incorrect of course.

Then there's the side issue that even if these buttons look ok, they don't actually completely function in the intended way: that is, it was intended that you could use these to override the defaults, but that doesn't work atm.

Assigning to self. I've been annoyed about this for a while now. IIRC, at the very beginning, a very long time ago, it wasn't like this. Then, it suddenly changed once, when someone used the enum bitflag prop-widget and/or wrapped all of them in that way... which is incorrect of course. Then there's the side issue that even if these buttons look ok, they don't actually completely function in the intended way: that is, it was intended that you could use these to override the defaults, but that doesn't work atm.
Member

An update:
So, I've found the commit responsible for this now. It is 1c3f2354f8

Working on rolling back some of these things now :)

An update: So, I've found the commit responsible for this now. It is 1c3f2354f8 Working on rolling back some of these things now :)
Author

Thank you, aligorith!

Thank you, aligorith!

This issue was referenced by 8db4a24e4e

This issue was referenced by 8db4a24e4efc6d94e69e790a1ce3179f2e9948e7
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 8db4a24e4e.

Closed by commit 8db4a24e4e.
Member

Now, onto #38619 :)

Now, onto #38619 :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43343
No description provided.